[package]
name = "elex-proxy"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0", features = ["http2"] }
futures = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["full"] }
tokio-stream = "^0"
tungstenite = "^0"
tokio-tungstenite = { version = "^0", features = ["native-tls"] }
openssl = { version = "^0.10", features = ["vendored"] }
url = "^2"
time = { version = "^0", features = [] }
tower = { version = "^0", features = ["full"] }
tower-http = { version = "^0", features = ["cors", "trace", "catch-panic"] }
once_cell = "^1"
tracing = "^0"
tracing-subscriber = "^0"
anyhow = "^1"
tower_governor = "^0.2"
bytes = "^1"
http-body-util = "^0"
dotenv = "^0"
regex = "^1"

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
#panic = "abort"
