[package]
name = "elex-proxy"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.7.4", features = ["http2"] }
futures = "^0"
serde = { version = "^1.0.195", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-stream = "^0"
tungstenite = "^0"
tokio-tungstenite = { version = "^0", features = ["native-tls"] }
openssl = { version = "^0.10.63", features = ["vendored"] }
url = "^2"
time = { version = "^0", features = [] }
tower = { version = "^0", features = ["full"] }
tower-http = { version = "^0.5.1", features = ["cors", "trace", "catch-panic"] }
once_cell = "^1"
tracing = "^0"
tracing-subscriber = "^0"
anyhow = "^1"
tower_governor = "^0.3.1"
bytes = "^1"
http-body-util = "^0"
dotenv = "^0"
regex = "^1.10.3"
headers = "0.4.0"
forwarded-header-value = "0.1.1"
rand = "0.8.5"
bitcoin = "0.31.1"
hex = "0.4.3"
moka = { version = "0.12.5", features = ["future"] }

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
#panic = "abort"
