[package]
name = "elex-proxy"
version = "0.2.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.7.5", features = ["http2"] }
futures = "^0"
serde = { version = "^1.0.197", features = ["derive"] }
serde_json = "^1.0.115"
tokio = { version = "^1.37.0", features = ["full"] }
tokio-stream = "^0.1.15"
tungstenite = "^0"
tokio-tungstenite = { version = "^0", features = ["native-tls"] }
openssl = { version = "^0.10.64", features = ["vendored"] }
url = "^2"
time = { version = "^0.3.34", features = [] }
tower = { version = "^0", features = ["full"] }
tower-http = { version = "^0.5.2", features = ["cors", "trace", "catch-panic"] }
once_cell = "^1"
tracing = "^0"
tracing-subscriber = "^0"
anyhow = "^1.0.81"
tower_governor = "^0.3.2"
bytes = "^1.6.0"
http-body-util = "^0.1.1"
dotenv = "^0"
regex = "^1.10.4"
headers = "0.4.0"
forwarded-header-value = "0.1.1"
rand = "0.8.5"
bitcoin = "0.31.2"
hex = "0.4.3"
moka = { version = "0.12.5", features = ["future"] }
ciborium = "0.2.2"
mime_guess = "2.0.4"

[build-dependencies]
vergen = { version = "9.0.0-beta.2", features = ["build", "cargo", "rustc"] }
anyhow = "^1.0.81"

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
#panic = "abort"
